WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214272
[iOS] Sometimes unable to type Japanese on docs.google.com
https://bugs.webkit.org/show_bug.cgi?id=214272
Summary
[iOS] Sometimes unable to type Japanese on docs.google.com
Daniel Bates
Reported
2020-07-13 14:23:51 PDT
Steps to reproduce: 1. Open Safari, tap URL bar and ensure English keyboard is being used. 2. Visit <
https://docs.google.com
> and create a new document. 3. Tap on URL bar and switch to Kana or Romaji. 4. Press Escape key on keyboard (Command + . if the keyboard doesn't have it) 5. Start typing. Then Latin characters will be inserted. But Japanese characters should have been. Note that bug may not occur again when repeating these steps in the **same** Safari session.
Attachments
Patch
(7.27 KB, patch)
2020-07-13 15:15 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2020-07-13 14:23:57 PDT
<
rdar://problem/59449972
>
Daniel Bates
Comment 2
2020-07-13 14:25:35 PDT
Cannot write a test due to
bug #199472
and fixing that requires some work to do....
Daniel Bates
Comment 3
2020-07-13 14:27:11 PDT
Bug only happens, if it does, when key entry is via window/document event listeners. That is, there is no UCB on screen.
Daniel Bates
Comment 4
2020-07-13 15:15:15 PDT
Created
attachment 404183
[details]
Patch
Darin Adler
Comment 5
2020-07-13 15:19:32 PDT
Comment on
attachment 404183
[details]
Patch No way to write a regression test?
Daniel Bates
Comment 6
2020-07-13 15:33:42 PDT
(In reply to Darin Adler from
comment #5
)
> Comment on
attachment 404183
[details]
> Patch > > No way to write a regression test?
Of course there is, but the last I tried to do so I hit
bug #199472
and to fix that is quite a bit of work and risk.
Wenson Hsieh
Comment 7
2020-07-13 16:34:19 PDT
Comment on
attachment 404183
[details]
Patch I _could_ imagine writing an API test for this that directly invokes -handleKeyWebEvent:withCompletionHandler: inside _WKInputDelegate methods, and verifies that -handleKeyInputMethodCommandForCurrentEvent is consulted. It isn’t 100% ideal, but it is a way to exercise this change.
Daniel Bates
Comment 8
2020-07-14 10:51:31 PDT
Thanks for the review Wenson!
Daniel Bates
Comment 9
2020-07-14 10:56:01 PDT
Comment on
attachment 404183
[details]
Patch Clearing flags on attachment: 404183 Committed
r264352
: <
https://trac.webkit.org/changeset/264352
>
Daniel Bates
Comment 10
2020-07-14 10:56:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug